<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/qstr_container"
    tools:context="com.annguyen.android.parti.quickstart.ui.QuickStartActivity">

    <TextView
        android:id="@+id/qstr_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_memorable_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_margin="50dp"
        android:layout_centerHorizontal="true"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/qstr_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/qstr_guide">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/qstr_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/qstr_finish_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <ProgressBar
        android:id="@+id/qstr_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/qstr_guide"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>
