<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_activity_container"
    android:background="@color/appBackground"
    tools:context="com.annguyen.android.parti.main.ui.MainActivity">

    <ImageView
        android:id="@+id/main_image"
        android:layout_height="128dp"
        android:layout_width="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_group_24dp"/>


    <android.support.v7.widget.CardView
        android:id="@+id/edit_message_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_image"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_group_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/white"
                android:hint="@string/edit_msg_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:cursorVisible="true"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/share_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_message_container"
        android:layout_centerHorizontal="true"
        android:text="@string/host"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button_main_color"
        android:textColor="@color/textSecondaryColor"/>

    <Button
        android:id="@+id/find_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/share_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/find_parties"
        android:layout_marginTop="4dp"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <ProgressBar
        android:id="@+id/main_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_image"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:visibility="gone"/>

</RelativeLayout>
